<resources>
    <string name="app_name">Myi-Utils</string>
    <string name="coded_by_shelter">CODED BY SHELTER</string>
    <string name="post">POST</string>
    <string name="qr">QR</string>
    <string name="top_text">本软件仅供内部人员使用</string>
    <string name="reset_code">ResetCode:</string>
    <string name="qr_password">QR_password:</string>
    <string name="password">0718</string>
    <string name="Bootloader">Bootloader</string>
    <string name="unlockaccount">UnlockAccount</string>
    <string name="unlockaddress">UnlockAddress</string>
    <string name="wipedata">WipeData</string>
    <string name="sts">STS:</string>
    <string name="sig">SIG:</string>
    <string name="cmd">CMD:</string>
    <string name="show_qr">Show QR</string>
    <string name="sign_qr">Sign QR</string>
    <string name="clean_all">CLEAN ALL</string>
    <string name="wipe_data_hw">HW WP</string>
    <string name="wipe_data_lx">LX WP</string>
    <string name="wipe_data_sx">SX WP</string>
    <string name="lock_screen">LOCK</string>
    <string name="unlock_screen">UNLOCK</string>
    <string name="send_message">MESSAGE</string>
    <string name="tablet_vibrator">VIBRATOR</string>
        <string name="tablet_beep">BEEP</string>
    <string name="launch_device_admin">ADMIN</string>
    <string name="launch_terminal">TERMINAL</string>
    <string name="launch_safe_mode">SAFE MODE</string>
    <string name="user_ID">USER_ID:</string>
    <string name="server_address">ADDRESS:</string>
    <string name="save">SAVA</string>
    <string name="clean">CLEAN</string>
    <string name="runscript">RunScript</string>
    <string name="runurlscript">RunUrlScript</string>
    <string name="low_version">Low Version</string>
    <string name="high_version">High Version</string>
    <string name="sign_qr_low">SIGN QR (LOW)</string>
    <string name="sign_qr_high">SIGN QR (HIGH)</string>
    <string name="choose">Choose School</string>
    <string name="gzzx">https://gzzx.lexuewang.cn:8003/</string>
    <string name="wzgjzx">https://wzgjzx.lexuewang.cn:8003/</string>
    <string name="qdjz">https://qdjz.lexuewang.cn:8003/</string>
    <string name="qdez">https://qdez.lexuewang.cn:8003/</string>
    <string name="dmxx">https://dmxx.lexuewang.cn:8013/</string>
    <string name="dcgz">https://dcgz2017.lexuewang.cn:8006/</string>
    <string name="qhjt">https://qhjt.lexuewang.cn:8003/</string>
</resources>