<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:text="Send Request"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="20sp"
                    android:textStyle="bold"
                    android:text="@string/user_ID"/>
                <EditText
                    android:id="@+id/user_ID"
                    android:layout_width="match_parent"

                    android:inputType="text"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginEnd="20sp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                android:id="@+id/choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose" />
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/wipe_data_lx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Wipe_data_lx"
                    android:text="@string/wipe_data_lx" />
                <Button
                    android:id="@+id/wipe_data_hw"
                    android:layout_width="wrap_content"
                    android:onClick="Wipe_data_hw"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wipe_data_hw" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/wipe_data_sx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Wipe_data_sx"
                    android:layout_weight="1"
                    android:text="@string/wipe_data_sx" />
                <Button
                    android:id="@+id/send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send_message" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/lock_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Lock_screen"
                    android:layout_weight="1"
                    android:text="@string/lock_screen" />
                <Button
                    android:id="@+id/unlock_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="UnLock_screen"
                    android:text="@string/unlock_screen" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/tablet_vibrator"
                    android:layout_width="wrap_content"
                    android:onClick="Vibrator"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tablet_vibrator" />
                <Button
                    android:id="@+id/tablet_beep"
                    android:layout_width="wrap_content"
                    android:onClick="Beep"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tablet_beep" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/launch_terminal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Launch_terminal"
                    android:text="@string/launch_terminal" />
                <Button
                    android:id="@+id/launch_safe_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Launch_safe_mode"
                    android:text="@string/launch_safe_mode" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/launch_device_admin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Launch_device_admin"
                    android:text="@string/launch_device_admin" />

                <Button
                    android:id="@+id/RunScript"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/runscript" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:layout_marginBottom="20sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/RunUrlScript"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/runurlscript" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>