<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"

    android:orientation="vertical"
    tools:context=".QRActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:text="Generate QR"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/clean"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="CleanAll"
                android:text="@string/clean_all"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20sp"
                    android:text="@string/reset_code"/>
                <EditText
                    android:id="@+id/reset_code"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginEnd="20sp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="20sp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/qr_password"/>
                <EditText
                    android:id="@+id/qr_password"
                    android:layout_width="match_parent"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginEnd="20sp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:text="Choose Version"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/Bootloader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="Bootloader"
                    android:text="@string/Bootloader" />

                <Button
                    android:id="@+id/UnlockAccount"
                    android:layout_width="0dp"
                    android:onClick="UnlockAccount"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/unlockaccount"
                    />



            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/UnlockServerAddress"
                    android:layout_width="0dp"
                    android:onClick="UnlockServerAddress"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/unlockaddress" />

                <Button
                    android:id="@+id/WipeData"
                    android:layout_width="0dp"
                    android:onClick="WipeData"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/wipedata" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/sts"/>
                <EditText
                    android:id="@+id/STS"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/Sign_low"
                    android:layout_width="0dp"
                    android:onClick="sign_QR_low"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/sign_qr_low" />

                <Button
                    android:id="@+id/Sign_high"
                    android:layout_width="0dp"
                    android:onClick="sign_QR_high"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/sign_qr_high" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/cmd"/>
                <EditText
                    android:id="@+id/CMD"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
            <Button
                android:id="@+id/Show_QR"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_qr" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>