<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/center"
            android:onClick="QR"
            android:padding="5dp"
            android:text="@string/qr"
            android:textSize="20sp" />

        <View
            android:id="@+id/center"
            android:layout_width="3dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="#ff0303" />

        <Button
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/center"
            android:padding="5dp"
            android:onClick="POST"
            android:text="@string/post"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:text="@string/coded_by_shelter"
        android:textSize="17sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Private version：2.5"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="What is new :"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="1.Runscript (finished)"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="2.Runurlscript (finished)"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="3.low version QR (finished)"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="4.add 'choose school' method (finished)"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>